--- a/index.html
+++ b/index.html
@@ -3,19 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMM329 Flexbox Practice</title>
-    <link rel="stylesheet" href="css/style.css"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>English Premier League</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box" id="box1">1</div>
-        <div class="box" id="box2">2</div>
-        <div class="box" id="box3">3</div>
-        <div class="box" id="box4">4</div>
-        <div class="box" id="box5">5</div>
-        <div class="box" id="box6">6</div>
-        <div class="box" id="box7">7</div>
-        <div class="box" id="box8">8</div>
-    </div>
+    <header>
+        <h1>English Premier League</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Teams</a></li>
+                <li><a href="#">Fixtures</a></li>
+                <li><a href="#">Standings</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>About the EPL</h2>
+            <p>The English Premier League (EPL) is the top level of the English football league system, contested by 20 clubs. It operates on a system of promotion and relegation with the English Football League (EFL).</p>
+        </section>
+
+        <section class="teams">
+            <h2>Top Teams</h2>
+            <div class="team-container">
+                <div class="team-card">
+                    <h3>Manchester United</h3>
+                    <p>Founded: 1878</p>
+                </div>
+                <div class="team-card">
+                    <h3>Liverpool</h3>
+                    <p>Founded: 1892</p>
+                </div>
+                <div class="team-card">
+                    <h3>Manchester City</h3>
+                    <p>Founded: 1880</p>
+                </div>
+                <div class="team-card">
+                    <h3>Chelsea</h3>
+                    <p>Founded: 1905</p>
+                </div>
+                <div class="team-card">
+                    <h3>Tottenham Hotspur</h3>
+                    <p>Founded: 1882</p>
+                </div>
+                <div class="team-card">
+                    <h3>Arsenal</h3>
+                    <p>Founded: 1886</p>
+                </div>
+                <div class="team-card">
+                    <h3>West Ham United</h3>
+                    <p>Founded: 1895</p>
+                </div>
+                <div class="team-card">
+                    <h3>Newcastle United</h3>
+                    <p>Founded: 1892</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>Page created to practice CSS Flexbox. HTML content created by ChatGPT.</p>
+    </footer>
 </body>
 </html>
