Update footer, nicer styles for team cards and nav

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <footer>
         <p>Page created to practice CSS Flexbox. HTML content created by ChatGPT.</p>
+        <p>COMM329 Flex Practice - Juno Meifert</p>
     </footer>
 </body>
 </html>
